@@ -169,9 +169,9 @@ function add_smiley(text_to_add) {
               tal:content="structure python:view.format_text(subject)">
               topic
             </h5>
-            <p tal:content="structure python:view.format_text(comment['text'])">
-              comment
-            </p>
+            <tal:block tal:define="text python:view.format_text(comment['text'])">
+              <p tal:content="structure python:view.replace_links(text)"></p>
+            </tal:block>
           </td>
         </tr>
       </tal:def>
@@ -187,7 +187,9 @@ function add_smiley(text_to_add) {
             tal:content="structure python:view.format_text(request.form['title'])">
             subject
           </h5>
-          <p tal:content="structure python:view.format_text(request.form['text'])" />
+          <tal:block tal:define="text python:view.format_text(request.form['text'])">
+            <p tal:content="structure python:view.replace_links(text)"></p>
+          </tal:block>
           <form method="post"
             id="previewform"
             enctype="application/x-www-form-urlencoded; charset=UTF-8"
